<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="team.y2k2.globa.main.profile.inquiry.add.InquiryAddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_add_inquiry"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativelayout_inquiry_top"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageview_inquiry_top_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                android:importantForAccessibility="no"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/header_back"
                android:onClick="@{() -> viewModel.onBackClick()}"/>

            <TextView
                android:id="@+id/textview_inquiry_top_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/profile_inquiry"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/normal"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textview_inquiry_top_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/profile_confirm"
                android:textSize="@dimen/normal"
                android:onClick="@{() -> viewModel.onConfirmClick()}"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativelayout_inquiry_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/relativelayout_inquiry_top">

            <TextView
                android:id="@+id/textview_inquiry_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="@dimen/large"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edittext_inquiry_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_inquiry_title"
                android:layout_marginTop="10dp"
                android:autofillHints="name"
                android:hint="@string/input_title"
                android:inputType="text" />

            <TextView
                android:id="@+id/textview_folder_name_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edittext_inquiry_title"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/notosans_regular"
                android:text="@{viewModel.titleCount}" android:textColor="@color/gray"
                android:textSize="13sp"
                tools:text="0/32" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativelayout_inquiry_description"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/relativelayout_inquiry_title">

            <TextView
                android:id="@+id/textview_inquiry_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="@dimen/large"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edittext_inquiry_description"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_below="@+id/textview_inquiry_description"
                android:layout_marginTop="10dp"
                android:autofillHints="name"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/input_description"
                android:inputType="textMultiLine" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>