...
            android:importantForAccessibility="no"
            tools:src="@drawable/help" />

    </LinearLayout>

    <TextView
        android:id="@+id/textview_item_setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="@dimen/normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearlayout_profile_icon_bg"
...
